<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OneButton</string>
    <string name="action_settings">Settings</string>
    <string name="local_ip">地址</string>
    <string name="default_vote_count">0</string>
    <string name="status">init</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_activity_vote">One Button</string>
    <string name="title_section1">说明</string>
    <string name="title_section2">投票</string>
    <string name="title_section3">设置</string>
    <string name="title_section4">日志</string>
    <string name="hello_world">Hello world!</string>

    <string name="label_vote_count">本次投票数:</string>
    <string name="label_local_ip">内网IP:</string>
    <string name="label_ip">IP:</string>
    <string name="label_net_type">网络类型:</string>
    <string name="label_vote_status">状态:</string>


    <string name="text_area_intro">
        www.baidu.com
    </string>
    <string name="label_network_status">网络连接状态:</string>
    <string name="label_vote_count_total">累计投票数:</string>
    <string name="label_server_return">服务器返回:</string>
    <string name="label_valid">本次投票有效验证:</string>
    <string name="label_vote_delay">官网渠道等待时间:</string>
    <string name="label_vote_success_count">本次成功投票数:</string>
    <string name="label_vote_success_count_total">累计成功投票数:</string>
    <string name="label_vote_success_rate">本次投票成功率:</string>
    <string name="label_vote_speed">投票速度:</string>
    <string name="label_vote_delay_android">安卓渠道等待时间:</string>
    <string name="label_vote_delay_ios">iOS渠道等待时间:</string>

</resources>
