<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:weightSum="1">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11">

        <!--<TableRow-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent">-->

            <!--<TextView-->
                <!---->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/label_network_status" />-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:id="@+id/textViewNetworkStatus"-->
                <!--android:text="" />-->
        <!--</TableRow>-->

        <!--<TableRow-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent">-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/label_local_ip" />-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:id="@+id/textViewLocalIP"-->
                <!--android:text="" />-->
        <!--</TableRow>-->

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_ip" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/textVieIP"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_vote_count" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/textViewVoteCount"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_vote_count_total" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/textViewVoteCountTotal"
                android:text="" />
        </TableRow>

        <!--<TableRow-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent">-->

            <!--<TextView-->
                <!---->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/label_vote_status" />-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:id="@+id/textViewStatue"-->
                <!--android:text="" />-->
        <!--</TableRow>-->

        <!--<TableRow-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent">-->

            <!--<TextView-->
                <!---->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/label_valid" />-->

            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:id="@+id/textViewValid"-->
                <!--android:text="" />-->

        <!--</TableRow>-->

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView

                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_vote_delay_android" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/textViewDelay_android"
                android:text="" />

        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tableRow2">

            <TextView
                
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_vote_delay_ios"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/textViewDelay_iOS"
                android:text=""
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tableRow">

            <TextView

                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_vote_delay"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/textViewDelay"
                android:text=""
                android:layout_height="wrap_content" />
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_vote_success_count" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/textViewSuccessCount"
                android:text="" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_vote_success_count_total" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/textViewSuccessCountTotal"
                android:text="" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_vote_success_rate" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/textViewSuccessRate"
                android:text="" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_vote_speed" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/textViewSpeed"
                android:text="" />

        </TableRow>


    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:id="@+id/textViewResult_Android"
        android:textIsSelectable="true"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:id="@+id/textViewResult_iOS"
        android:textIsSelectable="true"
        android:text="" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:id="@+id/textViewResult"
        android:textIsSelectable="true"
        android:text="" />




</LinearLayout>